--- a/style.css
+++ b/style.css
@@ -40,20 +40,17 @@ h1 {
   margin: 0;
 }
 
-.marker {
-  background-image: url('https://cdn.shopify.com/s/files/1/1061/1924/products/Emoji_Icon_-_Smirk_face_1024x1024.png?v=1571606093');
-  background-size: cover;
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  cursor: pointer;
-}
 
-.mapboxgl-popup {
-  max-width: 200px;
+/*맵박스 로고 가리기*/
+.mapbox-logo{ 
+  display: none; 
 }
-
-.mapboxgl-popup-content {
-  text-align: center;
-  font-family: 'Open Sans', sans-serif;
+.mapboxgl-ctrl-logo { 
+  display: none !important; 
+} 
+.mapbox-improve-map { 
+  display: none; 
+} 
+.mapboxgl-ctrl-compass { 
+  display: none; 
 }
