--- a/style.css
+++ b/style.css
@@ -39,6 +39,12 @@ h1 {
   padding: 10px;
   margin: 0;
 }
+p {
+  font-family: 'helvetica', sans-serif;
+  font-size: 1.2rem;
+  padding: 10px;
+  margin: 0;
+}
 
 
 /*맵박스 로고 가리기*/
