--- a/style.css
+++ b/style.css
@@ -60,3 +60,8 @@ p {
 .mapboxgl-ctrl-compass { 
   display: none; 
 }
+
+.mapboxgl-popup {
+max-width: 400px;
+font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
+}
