--- a/style.css
+++ b/style.css
@@ -38,12 +38,14 @@ h1 {
   font-weight: 400;
   padding: 10px;
   margin: 0;
+  word-break: keep-all;
 }
 p {
   font-family: 'helvetica', sans-serif;
   font-size: 1.2rem;
   padding: 10px;
   margin: 0;
+  word-break: keep-all;
 }
 
 
