--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
 
 h1 {
   font-family: 'helvetica', sans-serif;
-  font-size: 3rem;
+  font-size: 2.3rem;
   font-weight: 400;
   padding: 10px;
   margin: 0;
@@ -46,6 +46,11 @@ p {
   padding: 10px;
   margin: 0;
   word-break: keep-all;
+}
+
+#pd2 img {
+  padding: 20px;
+  width: 50%;
 }
 
 
