--- a/style.css
+++ b/style.css
@@ -24,10 +24,11 @@ body {
 
 #info-box {
   position: absolute;
-  width: 50%;
-  height: 100%;
+  width: 100%;
+  height: 30%;
   right: 0px;
-  background: rgb(0,255,0);
+  bottom: 0px;
+  background: rgba(0,0,0,0.5);
   color: black;
 }
 
