--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
   bottom: 0;
   right: 0;
   left: 0;
-  width: 50%;
+  width: 100%;
   height: 100%; !important;    
 }
 
@@ -32,10 +32,17 @@ body {
   color: black;
 }
 
+.info_left {
+  position: absolute;
+  background-color: red;
+/*   left: 42px; */
+  margin: 42px;
+}
+
 
 h1 {
   font-family: 'helvetica', sans-serif;
-  font-size: 2.3rem;
+  font-size: 60pt; /*   2.3rem */
   font-weight: 400;
   padding: 10px;
   margin: 0;
@@ -49,7 +56,7 @@ p {
   word-break: keep-all;
 }
 
-#pd2 img {
+#info2 img {
   padding: 20px;
   width: 50%;
 }
