--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body {
 
 #info-box {
   position: absolute;
+  display: flex;
   width: 100%;
   height: 30%;
   right: 0px;
@@ -32,17 +33,24 @@ body {
   color: black;
 }
 
-.info_left {
-  position: absolute;
+.info-left {
+  position: relative;
+  width: 50%;
   background-color: red;
-/*   left: 42px; */
-  margin: 42px;
+  margin: 22px;
+}
+
+.info-right {
+  position: relative;
+  width: 50%;
+  background-color: blue;
+  margin: 22px;
 }
 
 
 h1 {
   font-family: 'helvetica', sans-serif;
-  font-size: 60pt; /*   2.3rem */
+  font-size: 2.3rem; /*   2.3rem */
   font-weight: 400;
   padding: 10px;
   margin: 0;
