--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 html,
 body {
   width: 100%;
@@ -10,7 +9,6 @@ body {
   overflow: hidden;
 }
 
-
 #map {
   position: fixed !important;
   top: 0;
@@ -20,7 +18,6 @@ body {
   width: 100%;
   height: 100%; !important;    
 }
-
 
 #info-box {
   position: absolute;
@@ -56,6 +53,16 @@ h1 {
   margin: 0;
   word-break: keep-all;
 }
+
+h2 {
+  font-family: 'helvetica', sans-serif;
+  font-size: 1.2rem; /*   2.3rem */
+  font-weight: 400;
+  padding: 10px;
+  margin: 0;
+  word-break: keep-all;
+}
+
 p {
   font-family: 'helvetica', sans-serif;
   font-size: 1.2rem;
