--- a/style.css
+++ b/style.css
@@ -32,6 +32,8 @@ body {
 
 .info-left {
   position: relative;
+  display: grid;
+  grid-template-rows: 20%
   width: 50%;
   background-color: red;
   margin: 22px;
@@ -42,6 +44,7 @@ body {
   width: 50%;
   background-color: blue;
   margin: 22px;
+  text-align: right;
 }
 
 
@@ -49,16 +52,14 @@ h1 {
   font-family: 'helvetica', sans-serif;
   font-size: 2.3rem; /*   2.3rem */
   font-weight: 400;
-  padding: 10px;
   margin: 0;
   word-break: keep-all;
 }
 
 h2 {
   font-family: 'helvetica', sans-serif;
-  font-size: 1.2rem; /*   2.3rem */
+  font-size: 1.1rem; /*   2.3rem */
   font-weight: 400;
-  padding: 10px;
   margin: 0;
   word-break: keep-all;
 }
@@ -66,7 +67,7 @@ h2 {
 p {
   font-family: 'helvetica', sans-serif;
   font-size: 1.2rem;
-  padding: 10px;
+/*   padding-top: 10px; */
   margin: 0;
   word-break: keep-all;
 }
