--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body {
 .info-left {
   position: relative;
   display: grid;
-  grid-template-rows: 20%
+  grid-template-rows: 20% 40% 40%;
   width: 50%;
   background-color: red;
   margin: 22px;
