--- a/style.css
+++ b/style.css
@@ -16,7 +16,8 @@ body {
   right: 0;
   left: 0;
   width: 100%;
-  height: 100%; !important;    
+  height: 100%; !important; 
+  background : red;
 }
 
 #info-box {
@@ -35,14 +36,14 @@ body {
   display: grid;
   grid-template-rows: 20% 40% 40%;
   width: 50%;
-  background-color: red;
+/*   background-color: red; */
   margin: 22px;
 }
 
 .info-right {
   position: relative;
   width: 50%;
-  background-color: blue;
+/*   background-color: blue; */
   margin: 22px;
   text-align: right;
 }
