--- a/style.css
+++ b/style.css
@@ -16,8 +16,8 @@ body {
   right: 0;
   left: 0;
   width: 100%;
-  height: 100%; !important; 
-  background : red;
+  height: 100% !important; 
+  background : blue;
 }
 
 #info-box {
