--- a/style.css
+++ b/style.css
@@ -9,6 +9,26 @@ body {
   overflow: hidden;
 }
 
+.header {
+  position: fixed;
+  display: flex;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 50px;
+  background-color: yellow;
+}
+
+.project-title, .project-info {
+  position: absolute;
+  margin: 42px;
+  margin-top: 30px;
+}
+
+.project-info {
+  right: 0;
+}
+
 #map {
   position: fixed !important;
   top: 0;
@@ -23,28 +43,23 @@ body {
 #info-box {
   position: absolute;
   display: flex;
+  left: 0;
+  bottom: 0;
   width: 100%;
-  height: 30%;
-  right: 0px;
-  bottom: 0px;
+  height: 28%;
   background: rgba(0,0,0,0);
   color: black;
 }
 
-.info-left {
+.info-left, .info-right {
   position: relative;
-  display: grid;
-  grid-template-rows: 20% 40% 40%;
+  display: inline;
   width: 50%;
 /*   background-color: red; */
   margin: 42px;
 }
 
 .info-right {
-  position: relative;
-  width: 50%;
-/*   background-color: blue; */
-  margin: 42px;
   text-align: right;
 }
 
@@ -54,6 +69,7 @@ h1 {
   font-size: 2.3rem; /*   2.3rem */
   font-weight: 400;
   margin: 0;
+  padding-top: 0.1rem;
   word-break: keep-all;
 }
 
@@ -68,8 +84,8 @@ h2 {
 p {
   font-family: 'helvetica', sans-serif;
   font-size: 1.2rem;
-/*   padding-top: 10px; */
   margin: 0;
+  padding-top: 0.5rem;
   word-break: keep-all;
 }
 
