--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
   left: 0;
   width: 100%;
   height: 50px;
-  background-color: yellow;
+/*   background-color: yellow; */
 }
 
 .project-title, .project-info {
