--- a/style.css
+++ b/style.css
@@ -41,14 +41,15 @@ body {
 }
 
 #info-box {
-  position: absolute;
+  position: fixed;
   display: flex;
   left: 0;
   bottom: 0;
   width: 100%;
-  height: 28%;
+  height: 180px;
   background: rgba(0,0,0,0);
   color: black;
+  background-color: orange;
 }
 
 #info-left, #info-right {
@@ -69,6 +70,7 @@ body {
 #profile_grid {
   background-color: blue;
   display: flex;
+  height: 100%;
 }
 
 .profile {
@@ -76,7 +78,6 @@ body {
   width: 50px;
   height: 100%;
 }
-
 
 
 h1 {
@@ -109,15 +110,6 @@ p {
   width: 50%;
 }
 
-/*마커 디자인*/
-.marker {
-  background-image: url('https://cdn.glitch.global/1a457f74-eb98-4ed1-8631-b5320b847340/pos.png?v=1695349509014');
-  background-size: cover;
-  width: 60px;
-  height: 60px;
-  border-radius: 0%;
-  cursor: pointer;
-}
 
 
 /*맵박스 로고 가리기*/
