--- a/style.css
+++ b/style.css
@@ -41,8 +41,8 @@ body {
 }
 
 #info-box {
-  position: fixed;
   display: flex;
+  position: fixed;
   left: 0;
   bottom: 0;
   width: 100%;
@@ -71,7 +71,11 @@ body {
 }
 
 .right_title {
-  text-align: bottom;
+  height: 100%;
+  bottom: 0;
+  font-family: 'helvetica', sans-serif;
+  font-size: 1.0rem;
+  font-weight: 400;
   background-color: yellow;
 }
 
@@ -79,19 +83,21 @@ body {
   background-color: blue;
   display: flex;
   height: 100%;
-
 }
 
 .profile {
   background-color: yellow;
-  width: 50px;
+  width: 10vw;
   height: 100%;
   text-align: center;
-  margin-left : 1.5vw;
+  margin : 1.5vw;
+  
+  display: grid;
+  grid-template-rows : 60% 40%;
 }
 
-
-h1 {
+/* text */
+#address_dong {
   font-family: 'helvetica', sans-serif;
   font-size: 2.3rem; /*   2.3rem */
   font-weight: 400;
@@ -100,7 +106,7 @@ h1 {
   word-break: keep-all;
 }
 
-h2 {
+#address_sigu {
   font-family: 'helvetica', sans-serif;
   font-size: 1.1rem; /*   2.3rem */
   font-weight: 400;
@@ -108,7 +114,7 @@ h2 {
   word-break: keep-all;
 }
 
-p {
+#address_des {
   font-family: 'helvetica', sans-serif;
   font-size: 1.2rem;
   margin: 0;
