--- a/style.css
+++ b/style.css
@@ -49,16 +49,15 @@ body {
   height: 180px;
   background: rgba(0,0,0,0);
   color: black;
-  background-color: orange;
+/*   background-color: orange; */
 }
 
 #info-left, #info-right {
   position: relative;
   display: inline;
   width: 50%;
-  background-color: red;
-  margin-left: 2vw;
-  margin-right: 2vw;
+/*   background-color: red; */
+  margin: 2vw;
 }
 
 #info-right {
@@ -72,28 +71,26 @@ body {
 
 .right_title {
   height: 100%;
-  bottom: 0;
-  font-family: 'helvetica', sans-serif;
   font-size: 1.0rem;
-  font-weight: 400;
-  background-color: yellow;
+  background-color: orange;
 }
 
 #profile_grid {
-  background-color: blue;
+/*   background-color: blue; */
   display: flex;
   height: 100%;
 }
 
 .profile {
+  position: relative;
   background-color: yellow;
   width: 10vw;
   height: 100%;
   text-align: center;
-  margin : 1.5vw;
+  margin-left : 1.5vw;
   
   display: grid;
-  grid-template-rows : 60% 40%;
+  grid-template-rows : 70% 30%;
 }
 
 /* text */
@@ -122,11 +119,11 @@ body {
   word-break: keep-all;
 }
 
-#info2 img {
+/* #info2 img {
   padding: 20px;
   width: 50%;
 }
-
+ */
 
 
 /*맵박스 로고 가리기*/
