--- a/style.css
+++ b/style.css
@@ -46,18 +46,16 @@ body {
   left: 0;
   bottom: 0;
   width: 100%;
-  height: 180px;
+  height: 240px;
   background: rgba(0,0,0,0);
   color: black;
-/*   background-color: orange; */
 }
 
 #info-left, #info-right {
   position: relative;
   display: inline;
   width: 50%;
-/*   background-color: red; */
-  margin: 2vw;
+  margin: 2.4vw;
 }
 
 #info-right {
@@ -70,13 +68,12 @@ body {
 }
 
 .right_title {
-  height: 100%;
   font-size: 1.0rem;
   background-color: orange;
 }
 
 #profile_grid {
-/*   background-color: blue; */
+  background-color: blue;
   display: flex;
   height: 100%;
 }
@@ -118,12 +115,6 @@ body {
   padding-top: 0.5rem;
   word-break: keep-all;
 }
-
-/* #info2 img {
-  padding: 20px;
-  width: 50%;
-}
- */
 
 
 /*맵박스 로고 가리기*/
