--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body {
   left: 0;
   bottom: 0;
   width: 100%;
-  height: 240px;
+  height: 34vh;
   background: rgba(0,0,0,0);
   color: black;
 }
@@ -61,7 +61,6 @@ body {
 #info-right {
   text-align: right;
   width: 100%;
-  background-color: grey;
   
   display: grid;
   grid-template-rows : 30% 70%;
@@ -69,25 +68,37 @@ body {
 
 .right_title {
   font-size: 1.0rem;
-  background-color: orange;
 }
 
 #profile_grid {
-  background-color: blue;
+/*   background-color: blue; */
   display: flex;
+  justify-content: flex-end;
   height: 100%;
 }
 
 .profile {
   position: relative;
-  background-color: yellow;
-  width: 10vw;
+/*   background-color: yellow; */
+  width: 80px;
   height: 100%;
   text-align: center;
-  margin-left : 1.5vw;
+  margin-left : 1%;
   
-  display: grid;
-  grid-template-rows : 70% 30%;
+  display: inline;
+/*   grid-template-rows : 70% 30%; */
+}
+
+.pict {
+  background-color: yellow;
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  margin: auto;
+}
+
+.name {
+  padding-top: 0.5rem;
 }
 
 /* text */
