--- a/style.css
+++ b/style.css
@@ -9,6 +9,11 @@ body {
   overflow: hidden;
 }
 
+:root {
+  --pict_width: 72px;
+}
+
+
 .header {
   position: fixed;
   display: flex;
@@ -21,7 +26,7 @@ body {
 
 .project-title, .project-info {
   position: absolute;
-  margin: 42px;
+  margin: 2.4vw;
   margin-top: 30px;
 }
 
@@ -46,7 +51,7 @@ body {
   left: 0;
   bottom: 0;
   width: 100%;
-  height: 34vh;
+  height: 32vh;
   background: rgba(0,0,0,0);
   color: black;
 }
@@ -63,15 +68,16 @@ body {
   width: 100%;
   
   display: grid;
-  grid-template-rows : 30% 70%;
+  grid-template-rows : 10% 20% 70%;
+/*   background-color: blue; */
 }
 
 .right_title {
   font-size: 1.0rem;
+/*   background-color: orange; */
 }
 
 #profile_grid {
-/*   background-color: blue; */
   display: flex;
   justify-content: flex-end;
   height: 100%;
@@ -79,26 +85,24 @@ body {
 
 .profile {
   position: relative;
-/*   background-color: yellow; */
+  display: inline;
   width: 80px;
   height: 100%;
   text-align: center;
   margin-left : 1%;
-  
-  display: inline;
-/*   grid-template-rows : 70% 30%; */
+  /*   background-color: grey; */
 }
 
 .pict {
   background-color: yellow;
   border-radius: 50%;
-  width: 80px;
-  height: 80px;
+  width: var(--pict_width);
+  height: var(--pict_width);
   margin: auto;
 }
 
 .name {
-  padding-top: 0.5rem;
+  padding-top: 0.8rem;
 }
 
 /* text */
