--- a/style.css
+++ b/style.css
@@ -111,13 +111,13 @@ body {
   font-size: 2.3rem; /*   2.3rem */
   font-weight: 400;
   margin: 0;
-  padding-top: 0.1rem;
+  padding-top: 0.4rem;
   word-break: keep-all;
 }
 
 #address_sigu {
   font-family: 'helvetica', sans-serif;
-  font-size: 1.1rem; /*   2.3rem */
+  font-size: 1.rem; /*   2.3rem */
   font-weight: 400;
   margin: 0;
   word-break: keep-all;
