--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+/* * {
+   transition: all 2s;
+} */
+
 html,
 body {
   width: 100%;
@@ -42,7 +46,7 @@ body {
   left: 0;
   width: 100%;
   height: 100% !important; 
-  background : yellow;
+  background-color : #B4DBE3;
 }
 
 #info-box {
