--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body {
   left: 0;
   width: 100%;
   height: 100% !important; 
-  background-color : #B4DBE3;
+  background-color : #3b4054;
 }
 
 #info-box {
