--- a/style.css
+++ b/style.css
@@ -17,6 +17,24 @@ body {
   --pict_width: 72px;
 }
 
+#ctl_left, #ctl_right {
+  position: fixed;
+  z-index: 100;
+  display: flex;
+  top: calc(50vh-25px);
+  width: 50px;
+  height: 50px;
+  margin: 2.4vw;
+  background-color: yellow;
+}
+
+#ctl_left {
+  left: 0;
+}
+
+#ctl_right {
+  right: 0;
+}
 
 #header {
   position: fixed;
@@ -140,10 +158,6 @@ body {
   margin: 0;
   padding-top: 1rem;
   word-break: keep-all;
-}
-
-.controller {
-  background-color: yellow;
 }
 
 
