--- a/style.css
+++ b/style.css
@@ -15,17 +15,19 @@ body {
 
 :root {
   --pict_width: 72px;
+  --ctl_width : 50px;
 }
 
 #ctl_left, #ctl_right {
   position: fixed;
   z-index: 100;
   display: flex;
-  top: calc(50vh-25px);
-  width: 50px;
-  height: 50px;
+  top: calc(50vh - var(--ctl_width) * 0.5);
+  width: var(--ctl_width);
+  height: var(--ctl_width);
   margin: 2.4vw;
   background-color: yellow;
+  opacity: 0;
 }
 
 #ctl_left {
@@ -83,6 +85,7 @@ body {
   height: 32vh;
   color: black;
   background: linear-gradient(rgba(255,255,255,0), rgba(255,255,255,1)); 
+  pointer-events: none;
 }
 
 #info-left, #info-right {
