--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ body {
   left: 0;
   width: 100%;
   height: 100% !important; 
-  background-color : #3b4054;
+  background-color : #ffffff;
 }
 
 #info-box {
