--- a/style.css
+++ b/style.css
@@ -68,6 +68,10 @@ body {
   position: absolute;
   margin: 2.5vw;
   margin-top: 30px;
+
+  font-family: "rixseoulstation-pro", sans-serif;
+  font-weight: 500;
+  font-style: normal;  
 }
 
 #project-title {
@@ -98,7 +102,7 @@ body {
   left: 0;
   bottom: 0;
   width: 100%;
-  height: 32vh;
+  height: 34vh;
   color: black;
   background: linear-gradient(rgba(255,255,255,0), rgba(255,255,255,1)); 
   pointer-events: none;
