--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 
 :root {
   --pict_width: 72px;
-  --ctl_width : 50px;
+  --ctl_width :54px;
 }
 
 #ctl_left, #ctl_right {
@@ -26,8 +26,9 @@ body {
   width: var(--ctl_width);
   height: var(--ctl_width);
   margin: 2.4vw;
-  background-color: yellow;
+  background-color: grey;
   visibility: hidden;
+  border-radius: 20%;
 /*   pointer-events: none; */
 }
 
@@ -38,6 +39,12 @@ body {
 
 #ctl_right {
   right: 0;
+}
+
+i {
+  width: 100%;
+  height: 100%;
+  color: white;
 }
 
 #ctl_left:hover, #ctl_right:hover, #home:hover {
