--- a/style.css
+++ b/style.css
@@ -42,6 +42,9 @@ body {
 }
 
 i {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   color: white;
@@ -123,7 +126,8 @@ i {
 }
 
 #info-right {
-  text-align: right;
+/*   text-align: right; */
+  text-align: left;
   width: 100%;
   
   display: grid;
@@ -138,7 +142,8 @@ i {
 
 #profile_grid {
   display: flex;
-  justify-content: flex-end;
+/*   justify-content: flex-end; */
+  justify-content: start;
   height: 100%;
 }
 
