--- a/style.css
+++ b/style.css
@@ -29,10 +29,10 @@ body {
   top: calc(50vh - var(--ctl_width) * 1.8);
   width: var(--ctl_width);
   height: var(--ctl_width);
-  margin: 2.4vw;
   background-color: rgba(0,0,0,0);
-  visibility: hidden;
+  margin: 2.4vw;
   border-radius: 20%;
+  visibility: hidden;
 /*   pointer-events: none; */
 }
 
@@ -45,33 +45,34 @@ body {
   right: 0;
 }
 
-#home {
-  position: fixed;
-  margin: 2.4vw;
-  z-index: 100;  
-  width: calc(var(--ctl_width) * 0.8);
-  height: calc(var(--ctl_width) * 0.8);
-  background-color: black;
-  visibility: hidden;
-  border-radius: 20%;
-}
-
-#home_x {
-  width: 100%;
-  height: 100%;
-  margin: auto;
-  color: white;
-  background-color: yellow;
-  transform: scale(0.9);
-}
-
 i {
   width: auto;
   height: auto;
   margin: auto;
   color: black;
   transform: scale(1.1);
-  transition: all .2s ease-in-out;
+  transition: transform .1s ease-in;
+}
+
+#home {
+  position: fixed;
+  display: flex;
+  z-index: 100;  
+  width: calc(var(--ctl_width) * 0.7);
+  height: calc(var(--ctl_width) * 0.7);
+  background-color: black;
+  margin: 2.4vw;
+  margin-top: 40px;
+  border-radius: 20%;
+  visibility: hidden;
+}
+
+#home_x {
+  width: auto;
+  height: auto;
+  margin: auto;
+  color: white;
+  transform: scale(0.9);
 }
 
 #ctl_left:hover, #ctl_right:hover, #home:hover {
@@ -81,7 +82,6 @@ i {
 #ctl_left:hover > i, #ctl_right:hover > i {
   transform: scale(1.35);
 }
-
 
 #header {
   position: fixed;
