--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ i {
   margin: auto;
   color: black;
   transform: scale(1.1);
-  transition: transform .1s ease-in;
+  transition: transform .15s ease-in-out;
 }
 
 #home {
