--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 * {
   transition: opacity 1s;
   
-/*   font-family: "source-han-sans-korean", sans-serif;
+  font-family: "source-han-sans-korean", sans-serif;
   font-weight: 400;
-  font-style: normal; */
+  font-style: normal;
 }
 
 #project-title, #project-info, #address_dong {
@@ -102,13 +102,14 @@ i {
   left: 0;
   width: 100%;
   height: 80px;
-/*   background-color: yellow; */
+  margin-top: 44px;
+  background-color: yellow;
 }
 
 #project-title, #project-info {
   position: absolute;
   margin: 2.5vw;
-  margin-top: 44px;
+  background-color: orange;
 }
 
 #project-title {
