--- a/style.css
+++ b/style.css
@@ -98,22 +98,27 @@ i {
 #header {
   position: fixed;
   display: flex;
+  align-items: center;
   top: 0;
   left: 0;
   width: 100%;
-  height: 80px;
+  height: auto;
   margin-top: 44px;
   background-color: yellow;
 }
 
 #project-title, #project-info {
   position: absolute;
-  margin: 2.5vw;
+  align-items: stretch;
+  margin: 0 2.5vw;
+  height: auto;
   background-color: orange;
 }
 
 #project-title {
   opacity: 100;
+  left: 0;
+  
   font-size: 2.8rem;
 }
 
