--- a/style.css
+++ b/style.css
@@ -16,8 +16,6 @@
   font-style: normal; */ 
 }
 
-
-
 html,
 body {
   width: 100%;
@@ -34,6 +32,56 @@ body {
   --ctl_width :54px;
 }
 
+
+#header {
+  position: fixed;
+  display: flex;
+  align-items: center;
+  z-index: 100;  
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: auto;
+  margin-top: 50px;
+/*   background-color: yellow; */
+}
+
+#project-title, #project-info {
+  position: absolute;
+  align-items: stretch;
+  margin: 0 2.5vw;
+/*   background-color: orange; */
+}
+
+#project-title {
+  opacity: 100;
+  left: 0;
+  font-size: 2.8rem;
+}
+
+#project-info {
+  right: 0;
+  font-size: 1.8rem;
+}
+
+#home {
+  display: flex;
+  width: calc(var(--ctl_width) * 0.7);
+  height: calc(var(--ctl_width) * 0.7);
+  background-color: black;
+  margin: 0 2.4vw;
+  border-radius: 20%;
+  visibility: hidden;
+}
+
+#home_x {
+  width: auto;
+  height: auto;
+  margin: auto;
+  color: white;
+  transform: scale(0.9);
+}
+
 #ctl_left, #ctl_right {
   position: fixed;
   z-index: 100;
@@ -45,9 +93,7 @@ body {
   margin: 2.4vw;
   border-radius: 20%;
   visibility: hidden;
-/*   pointer-events: none; */
 }
-
 
 #ctl_left {
   left: 0;
@@ -66,27 +112,6 @@ i {
   transition: transform .15s ease-in-out;
 }
 
-#home {
-  position: fixed;
-  display: flex;
-  z-index: 100;  
-  width: calc(var(--ctl_width) * 0.7);
-  height: calc(var(--ctl_width) * 0.7);
-  background-color: black;
-  margin: 2.4vw;
-  margin-top: 40px;
-  border-radius: 20%;
-  visibility: hidden;
-}
-
-#home_x {
-  width: auto;
-  height: auto;
-  margin: auto;
-  color: white;
-  transform: scale(0.9);
-}
-
 #ctl_left:hover, #ctl_right:hover, #home:hover {
   cursor: pointer;
 }
@@ -95,37 +120,7 @@ i {
   transform: scale(1.35);
 }
 
-#header {
-  position: fixed;
-  display: flex;
-  align-items: center;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: auto;
-  margin-top: 44px;
-  background-color: yellow;
-}
 
-#project-title, #project-info {
-  position: absolute;
-  align-items: stretch;
-  margin: 0 2.5vw;
-  height: auto;
-  background-color: orange;
-}
-
-#project-title {
-  opacity: 100;
-  left: 0;
-  
-  font-size: 2.8rem;
-}
-
-#project-info {
-  right: 0;
-  font-size: 1.8rem;
-}
 
 #map {
   position: fixed !important;
@@ -157,7 +152,6 @@ i {
   display: inline;
   width: 50%;
   margin: 2.4vw;
-  
 }
 
 #info-right {
