--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 
 /*   font-family: "zw-mogujasusimgyeol", sans-serif;
   font-weight: 700;
-  font-style: normal; */ 
+  font-style: normal;  */
 }
 
 html,
@@ -65,6 +65,7 @@ body {
 }
 
 #home {
+  z-index: -1;  
   display: flex;
   width: calc(var(--ctl_width) * 0.7);
   height: calc(var(--ctl_width) * 0.7);
@@ -75,6 +76,7 @@ body {
 }
 
 #home_x {
+  z-index: 0;
   width: auto;
   height: auto;
   margin: auto;
