--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ body {
   position: absolute;
   align-items: stretch;
   margin: 0 2.5vw;
+  
 /*   background-color: orange; */
 }
 
@@ -57,15 +58,17 @@ body {
   opacity: 100;
   left: 0;
   font-size: 2.8rem;
+  z-index: 0;
 }
 
 #project-info {
   right: 0;
   font-size: 1.8rem;
+  z-index: 110;
 }
 
 #home {
-  z-index: -1;  
+  z-index: 110;
   display: flex;
   width: calc(var(--ctl_width) * 0.7);
   height: calc(var(--ctl_width) * 0.7);
@@ -73,10 +76,10 @@ body {
   margin: 0 2.4vw;
   border-radius: 20%;
   visibility: hidden;
+  z-index: 
 }
 
 #home_x {
-  z-index: 0;
   width: auto;
   height: auto;
   margin: auto;
@@ -86,7 +89,7 @@ body {
 
 #ctl_left, #ctl_right {
   position: fixed;
-  z-index: 100;
+  z-index: 110;
   display: flex;
   top: calc(50vh - var(--ctl_width) * 1.8);
   width: var(--ctl_width);
@@ -114,14 +117,14 @@ i {
   transition: transform .15s ease-in-out;
 }
 
-#ctl_left:hover, #ctl_right:hover, #home:hover {
-  cursor: pointer;
+
+#ctl_left:hover, #ctl_right:hover, #home:hover, #project-info:hover {
+  cursor: pointer !important;
 }
 
 #ctl_left:hover > i, #ctl_right:hover > i {
   transform: scale(1.35);
 }
-
 
 
 #map {
@@ -133,6 +136,7 @@ i {
   width: 100%;
   height: 100% !important; 
   background-color : #ffffff;
+  z-index: 0;
 }
 
 #info-box {
