👦🚲 Checkpoint ./style.css:55315810/12

--- a/style.css
+++ b/style.css
@@ -7,13 +7,13 @@
 }
 
 #project-title, #project-info, #address_dong {
-  font-family: "zw-songganggasa", sans-serif;
+/*   font-family: "zw-songganggasa", sans-serif;
   font-weight: 700;
-  font-style: normal;
+  font-style: normal; */
 
-/*   font-family: "zw-mogujasusimgyeol", sans-serif;
+  font-family: "zw-mogujasusimgyeol", sans-serif;
   font-weight: 700;
-  font-style: normal;  */
+  font-style: normal; 
 }
 
 html,
