--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
 }
 
 :root {
-  --pict_width: 76px;
+  --pict_width: 72px;
   --ctl_width :54px;
 }
 
@@ -139,9 +139,10 @@ i {
 }
 
 #info-box {
-  /*   클릭시 opacity : 100 */
   opacity: 0; 
-  display: flex;
+/*   padding: 0 2.4vw; */
+  display: grid;
+  grid-template-columns: 35% 65%;
   position: fixed;
   left: 0;
   bottom: 0;
@@ -155,17 +156,21 @@ i {
 #info-left, #info-right {
   position: relative;
   display: inline;
-  width: 50%;
-  margin: 2.4vw;
+  width: 100%;
+
+}
+
+#info-left {
+  background-color: orange;
 }
 
 #info-right {
-  text-align: right;
-/*   text-align: left; */
-  width: 100%;
+/*   text-align: right; */
+  text-align: left;
   
   display: grid;
-  grid-template-rows : 10% 20% 70%;
+  grid-template-rows : 15% 20% 65%;
+  background-color: yellow;
 }
 
 .right_title {
@@ -174,8 +179,8 @@ i {
 
 #profile_grid {
   display: flex;
-  justify-content: flex-end;
-/*   justify-content: start; */
+/*   justify-content: flex-end; */
+  justify-content: start;
   height: 100%;
 /*   margin-left: -20px; */
 }
