🍽📖 Checkpoint ./script.js:55315810/1693 ./style.css:55315810/58 ./.glitch-assets:55315810/862

--- a/style.css
+++ b/style.css
@@ -251,14 +251,14 @@ i {
 
 
 /*마커 디자인*/
-.dong_marker {
+/* .dong_marker {
   background-image: url('https://cdn.glitch.global/1a457f74-eb98-4ed1-8631-b5320b847340/pos.png?v=1695349509014');
   background-size: cover;
   width: 20px;
   height: 20px;
   border-radius: 0%;
   cursor: pointer;
-}
+} */
 
 
 
