--- a/style.css
+++ b/style.css
@@ -263,7 +263,27 @@ i {
 /*팝업창 디자인 관련*/
 .mapboxgl-popup {
   max-width: 200px;
-  background-color: rgba(0,0,0,0);
+}
+
+.mapboxgl-popup-content {
+  position: relative;
+  background: rgba(255,255,255,0.5);
+  opacity: 1;
+  box-shadow: 0 1px 2px rgba(0,0,0,0);
+  padding: 0 10;
+  pointer-events: auto;
+  font-family: 'Oswald';
+}
+
+.mapboxgl-popup-close-button {
+  display: none;
+}
+
+.mapboxgl-popup-tip {
+  width: 1px; /* 사각형의 가로 길이를 설정 */
+  height: 30px; /* 사각형의 세로 길이를 설정 */
+  background-color: #000000; /* 사각형의 배경 색상 설정 */
+  border-radius: 0; /* 모서리를 둥글게 만드는 것을 비활성화 */
 }
 
 /*맵박스 로고 가리기*/
