--- a/style.css
+++ b/style.css
@@ -271,8 +271,7 @@ i {
   opacity: 1;
   box-shadow: 0 1px 2px rgba(0,0,0,0);
   padding: 0 10;
-  pointer-events: auto;
-  font-family: 'Oswald';
+  font-family: 'source-han-sans-korean';
 }
 
 .mapboxgl-popup-close-button {
@@ -280,11 +279,10 @@ i {
 }
 
 .mapboxgl-popup-tip {
-  width: 1px; /* 사각형의 가로 길이를 설정 */
-  height: 30px; /* 사각형의 세로 길이를 설정 */
-  background-color: #000000; /* 사각형의 배경 색상 설정 */
-  border-radius: 0; /* 모서리를 둥글게 만드는 것을 비활성화 */
+  display: none;
+  background: rgba(255,255,255,0.5);
 }
+
 
 /*맵박스 로고 가리기*/
 .mapbox-logo { 
