--- a/style.css
+++ b/style.css
@@ -49,16 +49,14 @@ body {
   left: 0;
   width: 100%;
   height: auto;
-  margin-top: 50px;
-/*   background-color: yellow; */
+  margin-top: 70px;
+  background-color: yellow;
 }
 
 #project-title, #project-info {
   position: absolute;
   align-items: stretch;
   margin: 0 2.5vw;
-  
-/*   background-color: orange; */
 }
 
 #project-title {
@@ -68,7 +66,7 @@ body {
   z-index: 10;
   color: black;
   transition: transform .15s ease-in-out;
-  background-color: rgba(255,255,255,0.5);
+/*   background-color: rgba(255,255,255,0.5); */
 }
 
 #project-title:hover {
@@ -77,7 +75,7 @@ body {
 
 #project-info {
   right: 0;
-  font-size: 1.8rem;
+  font-size: 1.6rem;
   z-index: 110;
   display: flex;
   width: auto;
