--- a/style.css
+++ b/style.css
@@ -9,14 +9,15 @@
 
 
 * {
+  font-display: block;
   transition: opacity 1s;
-  
   font-family: "source-han-sans-korean", sans-serif;
   font-weight: 400;
   font-style: normal;
 }
 
 #project-title, #project-info, #address_dong {
+  font-display: block;
   font-family: "zw-mogujasusimgyeol", sans-serif;
   font-weight: 700;
   font-style: normal; 
@@ -35,7 +36,7 @@ body {
 }
 
 :root {
-  --pict_width: 74px;
+  --pict_width: 76px;
   --ctl_width :54px;
 }
 
@@ -170,6 +171,7 @@ i {
   width: 100%;
   height: 36vh;
   color: black;
+/*   background-color: rgba(255, 255, 255, 0.4); */
   background: linear-gradient(rgba(255,255,255,0), rgba(255,255,255,1)); 
   pointer-events: none;
 }
