--- a/style.css
+++ b/style.css
@@ -81,34 +81,18 @@ body {
   display: flex;
   width: auto;
   height: auto;
-/*   width: calc(var(--ctl_width) * 0.9);
-  height: calc(var(--ctl_width) * 0.9); */
   
   color: white;
   background-color: black;
   margin: 0 2.4vw;
   padding: 0.5%;
   border-radius: 20%;
+  transition: transform 0.1s ease-in-out;
 }
 
-/* #home {
-  z-index: 110;
-  display: flex;
-  width: calc(var(--ctl_width) * 0.7);
-  height: calc(var(--ctl_width) * 0.7);
-  background-color: black;
-  margin: 0 2.4vw;
-  border-radius: 20%;
-  visibility: hidden;
+#project-info:hover {
+  transform: scale(1.1);
 }
-
-#home_x {
-  width: auto;
-  height: auto;
-  margin: auto;
-  color: white;
-  transform: scale(0.9);
-} */
 
 #ctl_left, #ctl_right {
   position: fixed;
@@ -147,7 +131,6 @@ i {
 #ctl_left:hover > i, #ctl_right:hover > i {
   transform: scale(1.35);
 }
-
 
 #map {
   position: fixed !important;
@@ -263,6 +246,9 @@ i {
   word-break: keep-all;
 }
 
+.mapboxgl-popup {
+  width: 200px;
+}
 
 /*맵박스 로고 가리기*/
 .mapbox-logo { 
