--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ body {
   width: 100%;
   height: auto;
   margin-top: 70px;
-/*   background-color: yellow; */
+  background-color: yellow;
 }
 
 #project-title, #project-info {
@@ -96,11 +96,12 @@ body {
 
 #info-popup {
   z-index: 1000;
-  display: flex;
+  display: inline-block;
   justify-content: center;
   align-items: center;
-  position: fixed;
-  margin: 0 auto;
+  position: relative;
+  margin: auto;
+  padding: auto;
   top: 0;
   right: 0;
   width: 500px;
@@ -112,7 +113,6 @@ body {
 .popup-png {
   position: relative;
   margin: 0 auto;
-  padding: auto;
   width: 70%;
   height: auto;
   background-color: orange;
