--- a/style.css
+++ b/style.css
@@ -97,22 +97,30 @@ body {
 #info-popup {
   z-index: 1000;
   display: block;
-  justify-content: center;
-  align-items: center;
   position: fixed;
   right: 0;
   width: 500px;
   height: 100vh;
+  text-align: center;
   background-color: white;
   box-shadow: -2.5px 0 5px rgba(0, 0, 0, 0.3);
 }
 
+#popup-x {
+  transform: scale(1.2);
+  width: 20px;
+  height: 20px;
+}
+
+#popup-x:hover {
+    transform: scale(1.4);
+}
+
 .popup-png {
   position: relative;
-  margin: 0 auto;
-  width: 80%;
+  width: 70%;
   height: auto;
-  background-color: orange;
+  background-color: white;
 }
 
 .popup-h {
@@ -121,6 +129,7 @@ body {
   width: 90%;
   height: auto;
   background-color: orange;
+  text-align: left;
 }
 .popup-p {
   position: relative;
@@ -128,6 +137,7 @@ body {
   width: 90%;
   height: auto;
   background-color: orange;
+  text-align: left;
 }
 
 
