🌵🍖 Checkpoint ./style.css:55315810/2133 ./index.html:55315810/907

--- a/style.css
+++ b/style.css
@@ -102,9 +102,29 @@ body {
   padding-top: 50px;
   width: 500px;
   height: 100vh;
-  text-align: center;
+/*   text-align: center; */
   background-color: white;
   box-shadow: -2.5px 0 5px rgba(0, 0, 0, 0.3);
+}
+
+.popup-h, .popup-p {
+  position: relative;
+  left: 0;
+  margin: 60px 20px;
+/*   margin: 50px auto; */
+  width: 95%;
+  height: auto;
+/*   background-color: orange; */
+  text-align: left;
+}
+
+.popup-png {
+  position: relative;
+  width: 70%;
+  height: auto;
+  background-image: url("https://cdn.glitch.global/4300c893-b7d0-43b8-97e2-45113b955d30/%E1%84%91%E1%85%AE%E1%86%BC%E1%84%89%E1%85%AE%E1%84%8C%E1%85%B5%E1%84%85%E1%85%B5%20%E1%84%89%E1%85%A9%E1%84%80%E1%85%A2_%E1%84%90%E1%85%AE%E1%84%86%E1%85%A7%E1%86%BC.png?v=1697808509606");
+  background-size: contain;
+  background-color: orange;
 }
 
 #popup-x {
@@ -119,31 +139,6 @@ body {
 
 #popup-x:hover {
   transform: scale(1.4);
-}
-
-.popup-h {
-  position: relative;
-  margin: 50px auto;
-  width: 90%;
-  height: auto;
-  background-color: orange;
-  text-align: left;
-}
-
-.popup-png {
-  position: relative;
-  width: 70%;
-  height: auto;
-  background-color: white;
-}
-
-.popup-p {
-  position: relative;
-  margin: 0 auto;
-  width: 90%;
-  height: auto;
-  background-color: orange;
-  text-align: left;
 }
 
 
