--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ body {
   position: fixed;
   right: 0;
   padding-top: 50px;
-  width: 500px;
+  width: 550px;
   height: 100vh;
 /*   text-align: center; */
   background-color: white;
@@ -112,8 +112,9 @@ body {
   color: black;
   position: relative;
   left: 0;
-  margin: 20px 24px;
-  width: 95%;
+  margin: 20px auto;
+/*   margin: 20px 24px; */
+  width: 92%;
   height: auto;
   text-align: left;
 }
@@ -121,10 +122,10 @@ body {
 .popup-h {
   margin-top: 100px;
   font-weight: 700;
+  font-size: 1.6rem;
 }
 
 .popup-img {
-  width: 74%;
   height: 300px;
 /*   background-image: url("https://cdn.glitch.global/4300c893-b7d0-43b8-97e2-45113b955d30/%E1%84%91%E1%85%AE%E1%86%BC%E1%84%89%E1%85%AE%E1%84%8C%E1%85%B5%E1%84%85%E1%85%B5%20%E1%84%89%E1%85%A9%E1%84%80%E1%85%A2_%E1%84%90%E1%85%AE%E1%84%86%E1%85%A7%E1%86%BC_%E1%84%87%E1%85%A1%E1%86%AB%E1%84%8C%E1%85%A5%E1%86%AB.png?v=1697874370292"); */
   background-image: url("https://cdn.glitch.global/4300c893-b7d0-43b8-97e2-45113b955d30/%E1%84%91%E1%85%AE%E1%86%BC%E1%84%89%E1%85%AE%E1%84%8C%E1%85%B5%E1%84%85%E1%85%B5%20%E1%84%89%E1%85%A9%E1%84%80%E1%85%A2_%E1%84%90%E1%85%AE%E1%84%86%E1%85%A7%E1%86%BC.png?v=1697808509606");
@@ -133,13 +134,13 @@ body {
   background-repeat: no-repeat;
   object-fit: contain;
   background-color: #F9F9F9;
-  border-radius: 4px;
+/*   border-radius: 4px; */
 }
 
 #popup-x {
   position: fixed;
   right: 0;
-  margin-right: 2.5vw;
+  margin-right: 30px;
   width: 20px;
   height: 20px;
   transform: scale(1.2);
