🌯💆 Checkpoint ./style.css:55315810/617

--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ body {
 :root {
   --pict_width: 76px;
   --ctl_width :54px;
+  --popup_width: 550px;
 }
 
 
@@ -98,9 +99,9 @@ body {
   z-index: 1000;
   display: block;
   position: fixed;
-  right: 0;
+  right: calc(-1 * var(--popup_width));
   padding-top: 50px;
-  width: 550px;
+  width: var(--popup_width);
   height: 100vh;
 /*   text-align: center; */
   background-color: white;
@@ -113,7 +114,6 @@ body {
   position: relative;
   left: 0;
   margin: 20px auto;
-/*   margin: 20px 24px; */
   width: 92%;
   height: auto;
   text-align: left;
@@ -122,12 +122,12 @@ body {
 .popup-h {
   margin-top: 100px;
   font-weight: 700;
-  font-size: 1.6rem;
+/*   font-size: 1.6rem; */
 }
 
 .popup-img {
-  height: 300px;
-/*   background-image: url("https://cdn.glitch.global/4300c893-b7d0-43b8-97e2-45113b955d30/%E1%84%91%E1%85%AE%E1%86%BC%E1%84%89%E1%85%AE%E1%84%8C%E1%85%B5%E1%84%85%E1%85%B5%20%E1%84%89%E1%85%A9%E1%84%80%E1%85%A2_%E1%84%90%E1%85%AE%E1%84%86%E1%85%A7%E1%86%BC_%E1%84%87%E1%85%A1%E1%86%AB%E1%84%8C%E1%85%A5%E1%86%AB.png?v=1697874370292"); */
+  width: 90%;
+  height: 310px;
   background-image: url("https://cdn.glitch.global/4300c893-b7d0-43b8-97e2-45113b955d30/%E1%84%91%E1%85%AE%E1%86%BC%E1%84%89%E1%85%AE%E1%84%8C%E1%85%B5%E1%84%85%E1%85%B5%20%E1%84%89%E1%85%A9%E1%84%80%E1%85%A2_%E1%84%90%E1%85%AE%E1%84%86%E1%85%A7%E1%86%BC.png?v=1697808509606");
   background-size: contain;
   background-position: center;
@@ -138,7 +138,7 @@ body {
 }
 
 #popup-x {
-  position: fixed;
+  position: absolute;
   right: 0;
   margin-right: 30px;
   width: 20px;
