--- a/style.css
+++ b/style.css
@@ -201,24 +201,22 @@ i {
   z-index: 0;
 }
 
-.bottom {
-  position: fixed;
-  width: 100%;
-}
-
 #info-box {
   opacity: 0; 
   display: grid;
   grid-template-columns: 30% 70%;
-  position: fixed;
-  left: 0;
+  position: relative;
+/*   left: 0; */
   bottom: 0;
-  width: 100%;
-  height: 36vh;
+  width: 96vw;
+  height: 32vh;
+  margin: 0 auto;
+  padding-top: 40px;
   color: black;
-/*   background-color: rgba(255, 255, 255, 0.4); */
-  background: linear-gradient(rgba(255,255,255,0), rgba(255,255,255,1)); 
+  background-color: rgba(255, 255, 255, 0.4);
+/*   background-color: linear-gradient(rgba(255,255,255,0), rgba(255,255,255,1));  */
   pointer-events: none;
+  transition: opacity 0.2s ease-in-out;
 }
 
 #info-left, #info-right {
