--- a/style.css
+++ b/style.css
@@ -50,7 +50,6 @@ body {
   width: 100%;
   height: auto;
   padding-top: 70px;
-/*   background-color: yellow; */
 }
 
 #project-title, #project-info {
@@ -201,20 +200,37 @@ i {
   z-index: 0;
 }
 
+/* #info-box {
+  opacity: 0; 
+  display: grid;
+  grid-template-columns: 30% 70%;
+  position: fixed;
+  bottom: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: calc(100vw - 20px);
+  height: 32vh;
+  padding-top: 20px;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.8);
+  background-color: rgba(255, 255, 255, 0.95);
+  border-radius: 8px;
+  pointer-events: none;
+  transition: opacity 0.2s ease-in-out;
+} */
+
 #info-box {
   opacity: 0; 
   display: grid;
   grid-template-columns: 30% 70%;
-  position: relative;
-/*   left: 0; */
+  position: fixed;
+  left: 0;
   bottom: 0;
-  width: 96vw;
+  width: 100%;
   height: 32vh;
-  margin: 0 auto;
-  padding-top: 40px;
+/*   padding-top: 20px; */
   color: black;
-  background-color: rgba(255, 255, 255, 0.4);
-/*   background-color: linear-gradient(rgba(255,255,255,0), rgba(255,255,255,1));  */
+  background: linear-gradient(rgba(255,255,255,0), rgba(255,255,255,1)); 
   pointer-events: none;
   transition: opacity 0.2s ease-in-out;
 }
