--- a/style.css
+++ b/style.css
@@ -200,7 +200,7 @@ i {
   z-index: 0;
 }
 
-/* #info-box {
+#info-box {
   opacity: 0; 
   display: grid;
   grid-template-columns: 30% 70%;
@@ -211,15 +211,15 @@ i {
   width: calc(100vw - 20px);
   height: 32vh;
   padding-top: 20px;
-  color: white;
-  background-color: rgba(0, 0, 0, 0.8);
-  background-color: rgba(255, 255, 255, 0.95);
+  color: black;
+  background: linear-gradient(rgba(255,255,255,0.4), rgba(255,255,255,1)); 
+/*   background-color: rgba(36,39,51,0.9); */
   border-radius: 8px;
   pointer-events: none;
   transition: opacity 0.2s ease-in-out;
-} */
+}
 
-#info-box {
+/* #info-box {
   opacity: 0; 
   display: grid;
   grid-template-columns: 30% 70%;
@@ -228,12 +228,11 @@ i {
   bottom: 0;
   width: 100%;
   height: 32vh;
-/*   padding-top: 20px; */
   color: black;
   background: linear-gradient(rgba(255,255,255,0), rgba(255,255,255,1)); 
   pointer-events: none;
   transition: opacity 0.2s ease-in-out;
-}
+} */
 
 #info-left, #info-right {
   position: relative;
