🐔🕰 Checkpoint ./style.css:55315810/160 ./script.js:55315810/46

--- a/style.css
+++ b/style.css
@@ -24,7 +24,8 @@
 }
 
 :root {
-  --pict_width: 76px;
+  --pict_width: 64px;
+/*   --pict_width: 76px; */
   --ctl_width :54px;
   --popup_width: 550px;
 }
